# autobooru

./: Cargo.toml  Makefile.toml
migrations/: 20221018155328_init.sql
src/: client.rs  commands.rs  data.rs  error.rs  handler.rs  lib.rs  model.rs  task.rs
